lessons/195-eks/terraform/103-igw.tf
################################################################################
# Internet Gateway (IGW)
################################################################################
resource "aws_internet_gateway" "igw" {
  vpc_id = aws_vpc.main.id

  tags = {
    Name = "${local.vpc_name}-igw"
  }
}
